Fix nav line positioning on mobile

--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -242,7 +242,7 @@ h6, .h6 {
           height: 52px;
           position: absolute;
           top: 37px;
-          left: -44px; }
+          left: -43px; }
           @media only screen and (min-width: 768px) {
             #sidebar .sidebar__nav li .icon:after {
               left: -22px; } }
