--- a/assets/styles/sass/components/_sidebar.scss
+++ b/assets/styles/sass/components/_sidebar.scss
@@ -175,7 +175,7 @@
                     height: 52px;
                     position: absolute;
                     top: 37px;
-                    left: -44px;
+                    left: -43px;
 
                     @include respond(md) {
                         left: -22px;
